[package]
name = "storage-outpost"
version = "0.1.1"
authors = ["Bi Phan <bi@jackallabs.io>", "Serdar Turkmenafsar <IBC Protocol>"]
edition = "2021"
description = "Bringing decentralized, private, and self-custodial storage to the IBC"
license = "MIT"
readme = "README.md"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
no_exports = []

# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.14.0
"""

[dependencies]
prost = "0.12.3"
cosmwasm-schema = "1.4.0"
cosmwasm-std = { version = "1.5.0", features = [
    "cosmwasm_1_2",
    # Enable this if you only deploy to chains that have CosmWasm 1.4 or higher
    # "cosmwasm_1_4",
    "stargate",
    "ibc3",
] }
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde-json-wasm = "0.5.1"
thiserror = { version = "1.0.31" }
cosmos-sdk-proto = { version = "0.20.0", default-features = false, features = ["cosmwasm"] }
semver = "1.0"
cw-ownable = "0.5.1"
cw-ica-controller-derive = "0.4.2"
sha2 = "0.10.2"
hex = "0.4.3"
log = "0.4"

# simplelog = "0.11"
# once_cell = "1.19.0"

[dev-dependencies]
cw-multi-test = "0.16.5"

[workspace]
members = [
    ".",          
    "protobuf",  
    "cross-contract/contracts/outpost-factory", # Path to the nested library crate
    "cross-contract/contracts/outpost-user", # Path to the nested library crate
    "migrations/basic-migration/v1", 
    "migrations/basic-migration/v2",

]

