[package]
name = "proto-experiments"
version = "0.0.1"
authors = ["Bi Phan <bi@jackallabs.io>"]
description = "Testing out building Rust files from Jackal .proto definitions"
edition = "2021"

# [lib]
# crate-type = ["rlib"]
# path = "src/lib.rs"

doctest = false

[dependencies]
bytes = "0.4"
prost = "0.12.3"
prost-build = "0.12.3"
cosmwasm-schema = "1.5.0"
cosmwasm-std = { version = "1.5.0", features = [
    "cosmwasm_1_3",
    # Enable this if you only deploy to chains that have CosmWasm 1.4 or higher
    # "cosmwasm_1_4",
    "stargate",
    "ibc3",
] }
cw-storage-plus = "1.1.0"
cw2 = "1.1.1"
schemars = "0.8.10"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-wasm = "1.0.0"
thiserror = "1.0.50"
cosmos-sdk-proto = { version = "0.20.0", default-features = false, features = ["cosmwasm"] }
semver = "1.0"
cw-ownable = "0.5.1"
cw-ica-controller-derive = "0.4.2"
log = "0.4.21"
simplelog = "0.12.1"

[build-dependencies]
prost-build = "0.5"